# bakalr-cms

./: .dockerignore  .env.example  .env.full-stack.example  .env.production.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  FRONTEND_TEST_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  ISSUES.md  LICENSE  MIGRATION_STATUS.txt  Makefile  NOTICE.md  README.md  add-theme-permission.sh  add_missing_entries.py  alembic.ini  bakalr-cms.code-workspace  check_rate_limits.py  create_content_types.sh  docker-compose.dev.yml  docker-compose.full-stack.yml  docker-compose.yml  fix_products_v2.py  fix_seed_products.py  permissions_matrix.csv  pyproject.toml  seed.sh  sync_api_scopes.py  test-e2e.sh  test-quick.sh  test_auth.py  test_cache.py  test_content.py  test_core_functionality.sh  test_field_permissions.py  test_graphql.py  test_libretranslate_direct.py  (+13 more)
.github/: copilot-instructions.md
alembic/: env.py
backend/: .dockerignore  Dockerfile  Dockerfile.dev  __init__.py  main.py
data.ms/: instance-uid
docs/: BOUTIQUE_PROGRESS_UPDATE.md  BOUTIQUE_QUICKSTART.md  PERMISSIONS_MATRIX.md  PHASE7_COMPLETION_SUMMARY.md  PHASE7_PROGRESS_REPORT.md  PHASE7_TRANSLATION_INTEGRATION.md  PHASE_20_COMPLETION.md  PHASE_21_COMPLETION.md  PHASE_22_COMPLETION.md  PHASE_23_COMPLETION.md  RATE_LIMITING_COMPLETION.md  TESTING_RATE_LIMITS.md  UUID_MIGRATION.md  authentication.md  bakalr-boutique-migration-plan.md  bakalr-boutique-setup.md  deployment.md  developer-guide.md  getting-started.md  multi-tenancy-model.md  performance.md  quickstart.md  search.md  security.md  translation-apis.md  webhooks.md
keys/: jwt_private.pem  jwt_private.pem.local.bak  jwt_public.pem  jwt_public.pem.local.bak
nginx/: nginx.conf
scripts/: README.md  add_color_images.py  add_expanded_catalog.py  add_footer_translations.py  add_hair_colors.py  add_parent_categories.py  add_product_detail_labels.py  add_product_images.py  add_review_labels.py  add_reviews.py  add_sample_products.py  (+69 more)
(+298 files in other folders)
