[tool.poetry]
name = "bakalr-cms"
version = "0.1.0"
description = "Headless CMS with multi-tenancy, RBAC, and modern features"
authors = ["Bakalr Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.12"
redis = "^5.0.0"
celery = "^5.4.0"
python-dotenv = "^1.0.0"
aiofiles = "^24.1.0"
httpx = "^0.27.0"
email-validator = "^2.3.0"
bcrypt = "^5.0.0"
deep-translator = "^1.11.4"
pillow = "^12.0.0"
boto3 = "^1.41.3"
slowapi = "^0.1.9"
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = "^8.2"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.287.0"}
fastapi-mail = "^1.5.8"
jinja2 = "^3.1.6"
meilisearch = "^0.38.0"
scalar-fastapi = "^1.4.4"
psutil = "^7.1.3"
user-agents = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy.*",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:scalar_fastapi.*"
]
